--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/core": "~8.1.2",
-    "@angular/fire": "^5.2.1",
-    "@angular/forms": "~8.1.2",
-    "@angular/platform-browser": "~8.1.2",
-    "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
+    "@angular/common": "~7.1.4",
+    "@angular/compiler": "~7.1.4",
+    "@angular/core": "~7.1.4",
+    "@angular/fire": "^5.1.3",
+    "@angular/forms": "~7.1.4",
+    "@angular/platform-browser": "~7.1.4",
+    "@angular/platform-browser-dynamic": "~7.1.4",
+    "@angular/router": "~7.1.4",
     "@ionic-native/camera": "^5.12.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.12.0",
@@ -29,6 +29,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "7.1.4",
     "cordova-plugin-camera": "4.1.0",
     "cordova-plugin-device": "^2.0.2",
@@ -42,19 +43,19 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "geofirestore": "^3.3.1",
-    "rxjs": "~6.5.1",
+    "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.801.2",
-    "@angular-devkit/core": "~8.1.2",
-    "@angular-devkit/schematics": "~8.1.2",
-    "@angular/cli": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/compiler-cli": "~8.1.2",
-    "@angular/language-service": "~8.1.2",
+    "@angular-devkit/architect": "~0.11.4",
+    "@angular-devkit/build-angular": "^0.12.3",
+    "@angular-devkit/core": "~7.1.4",
+    "@angular-devkit/schematics": "~7.1.4",
+    "@angular/cli": "~7.1.4",
+    "@angular/compiler": "~7.1.4",
+    "@angular/compiler-cli": "^7.2.9",
+    "@angular/language-service": "~7.1.4",
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
@@ -70,7 +71,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.1.6"
   },
   "description": "An Ionic project",
   "cordova": {
